@@ -1,3 +1,14 @@
+2011-12-21  Darin Adler  <darin@apple.com>
+
+        Make ~CSSParserSelector use Vector<OwnPtr>
+        https://bugs.webkit.org/show_bug.cgi?id=73782
+
+        Reviewed by Alexey Proskuryakov.
+
+        * css/CSSParserValues.cpp:
+        (WebCore::CSSParserSelector::~CSSParserSelector): Use Vector<OwnPtr>
+        so we don't have to call leakPtr or deleteAllValues.
+
 2011-12-21  Yosifumi Inoue  <yosin@chromium.org>
 
         [Forms] Selection change by type-ahead doesn't fire 'change' event
